@@ -55,7 +55,7 @@ import static org.testng.Assert.assertThrows;
  * @bug 8186958 8210280 8281631 8285386 8284780
  * @modules java.base/java.util:open
  * @summary White box tests for HashMap-related internals around table sizing
- * @run testng/othervm -Xmx2g WhiteBoxResizeTest
+ * @run testng/othervm -Xmx2g -Xlog:gc=debug WhiteBoxResizeTest
  */
 public class WhiteBoxResizeTest {
 
